style.css
/* ... */
.dropdown-links {
  flex-direction: row;
}

.arrow {
  width: 10px;
  height: 10px;
  border: 7px solid;
  border-color: #000 transparent transparent transparent;
  margin: 10px 5px 0px;
}

.hamburger-icon-svg {
  display: none;
}

/* Hero section  */

.hero {
  background-image: url(./assets/Images/background18.jpg);
  background-size: cover;
  background-position: 30%;
  width: 100%;
  font-family: var(--font2);
  color: white;
}

.hero-content {
  width: 100%;
  background-color: rgba(0, 0, 0, 0.4);
  backdrop-filter: blur(1px);
  padding-block: 20%;
  min-height: min(max-content, max(min-content, stretch));
}

.hero-content > article {
  flex-direction: column;
  justify-content: flex-start;
  width: 40vw;
  transform: translateX(51%);
  margin-top: -35px;
  min-height: min(max-content, max(min-content, stretch));
}

.hero-content > article > h1 {
  font-size: 5rem;
  margin-bottom: 20px;
  margin-top: -40px;
}

.hero-content > article > span {
  margin-bottom: 20px;
  color: white;
  display: inline-block;
}

.hero-content > article > p {
  font-size: 1.5vw;
  font-family: var(--font1);
  text-wrap: wrap;
}

/* Our Features section  */
.container-1 {
  width: auto;
  height: 100%;
  background-color: #f1eeea;
  padding: 75px 200px;
  font-family: var(--font1);
  flex-direction: column;
  gap: 20px;
}

.feature-desc {
  flex-direction: column;
  width: 80%;
}

.feature-header {
  font-family: var(--font2);
  color: #343434;
  font-size: 40px;
  margin-bottom: 20px;
}

.feature-description {
  text-align: center;
  padding: 0 150px;
  font-size: 1.25rem;
  color: #343434;
  word-spacing: 2px;
  margin-bottom: 20px;
}

/* Cards */

.feature-card-section {
  display: flex;
  align-items: center;
  gap: 60px;
  justify-content: center;
  flex-wrap: wrap;
}

.card {
  flex-direction: column;
  width: 30%;
  height: auto;
}

.card-img {
  width: 100%;
  height: 300px;
}

.card-header {
  color: #343434;
  font-size: 2.5rem;
  font-family: var(--font2);
  text-align: center;
  margin-block: 10px;
}

.card-desc {
  text-align: center;
  font-size: 20px;
  margin-bottom: 15px;
}

.viewall-btn {
  color: #ba9d7b;
  font-size: 20px;
  gap: 5px;
  font-weight: bolder;
}

/* container 2 */

.container-2 {
  background-color: #656b50;
  padding: 75px 150px;
}

.img-description {
  color: white;
  font-family: var(--font2);
  width: 45%;
  padding-right: 10%;
}

.img-description > h1 {
  font-size: 80px;
}
.img-description > p {
  font-family: var(--font1);
  font-size: 25px;
}

.thumbnail-img {
  min-width: 45%;
  height: 425px;
  box-shadow: 0 0 50px 2px rgba(0, 0, 0, 0.2);
}

.container-3 {
  background-color: #f1eeea;
  padding: 50px 195px;
  display: flex;
}

.left-section {
  width: 45%;
}

.left-section > h1 {
  color: #343434;
  font-size: 80px;
  font-family: var(--font2);
}

.left-section > img {
  width: 100%;
  min-height: auto; /* changed to min-height to height  */
  margin-top: 10px;
}

.right-section {
  width: calc(100% - 45%);
  font-family: var(--font1);
  padding: 0px 80px;
}

.right-section > .top-para {
  color: #343434;
  font-size: 1.75rem;
}

ul.features-list > li {
  list-style-position: inside;
  margin: 5px 0px 5px 25px;
  font-size: 1.25rem;
}

ul.features-list > li::before {
  content: "\2022";
  color: red;
  font-weight: bold;
  display: inline-block;
  width: 1em;
  margin-left: -1.5em;
}

ul.features-list {
  margin-top: 15px;
  list-style-type: none;
}

.middle-list-section {
  margin-top: 50px;
}

.middle-list-section > h3 {
  font-size: 2.5rem;
  font-weight: bolder;
  font-family: var(--font2);
  color: #343434;
}

.bottom-para {
  margin-top: 50px;
  font-size: 1.25rem;
}

/* forest image section */
.forest-img {
  width: 100%;
  max-height: 35vw;
  background-image: url("./assets/Images/background-4.jpg");
}

/* contanier-4 section  */
.container-4 {
  background-color: #f1eeea;
  padding: 60px 200px;
  display: flex;
  flex-direction: row;
}
.contacts-left-section {
  display: flex;
  gap: 20px;
  flex-direction: column;
  min-width: 50%;
}

.contacts-left-section > h1 {
  font-family: var(--font2);
  font-size: 3.5vw;
  color: #343434;
}

.contacts-left-section > img {
  width: 90%;
  height: auto;
  box-shadow: 0 0 50px 2px rgba(0, 0, 0, 0.2);
}

.contact-right-section {
  display: flex;
  justify-content: flex-start;
  align-items: flex-start;
  flex-direction: column;
  max-width: 50%;
  padding: 20px 10px;
  gap: 2rem;
  color: #343434;
}

.contact-right-section > h3 {
  font-family: var(--font2);
  color: #343434;
  font-size: 2.5rem;
}

.contact-details-heading {
  color: #343434;
  font-family: var(--font1);
}

.contact-details {
  font-size: 1.25rem;
  font-family: var(--font1);
  color: #343434;
}

footer {
  background-color: #2a2525;
  flex-direction: column;
  gap: 5rem;
  color: white;
  font-family: var(--font1);
  padding: 100px 0;
}

.footer-details {
  gap: 150px;
  font-size: 1.25rem;
  flex-wrap: wrap;
}

.green-text {
  color: #b69b74;
  margin-bottom: 0.25rem;
  font-size: 1.75rem;
}

.copyright-section {
  background-color: #211c1c;
  padding: 3rem 1rem;
  font-family: var(--font1);
}

.copyright-section > p {
  color: #4e5763;
  font-size: 1.5rem;
}

/* breakpoints----------------------------- */
/* tablet view  */

@media screen and (max-width: 1200px) {
  .navbar-links > li {
    font-size: 1.25rem;
  }

  .card {
    width: 30%;
  }
  .container-1,
  .container-2,
  .container-3,
  .container-4 {
    padding: 4.5rem 5%;
  }

  .feature-card-section,
  .contact-details {
    gap: 1rem;
  }

  .img-description > p,
  ul.features-list > li,
  .bottom-para {
    font-size: 1rem;
  }

  .left-section > h1 {
    font-size: 2rem;
  }

  .right-section > .top-para {
    font-size: 1.25rem;
  }

  .middle-list-section > h3,
  .contact-right-section > h3 {
    font-size: 1.75rem;
  }
}
/* ... */

